# cronista

./: README.md  cron-insta.desktop  cron-insta.sh  package.json  pnpm-lock.yaml  svelte.config.js
.github/workflows/: build.yml
docs/: Copia de Ankaleth 2.0.md  analisis-creativo.md  analisis-ejemplo-completo.md  cron-insta-project-structure.md  cronista-project-structure.md  inicializar_proyecto_sobre_texto_existente.md  mejora temas y alineacion.md  proyecto editor.md  tramas.md
openspec/: config.yaml
openspec/changes/git-identity-remote/: design.md  proposal.md  tasks.md
openspec/changes/project-config/: design.md  exploration.md  proposal.md  tasks.md
openspec/changes/scaffold-tauri-project/: design.md  tasks.md
openspec/changes/tramas/: design.md  proposal.md  tasks.md
openspec/specs/editor-integration/: spec.md
openspec/specs/git-abstraction/: spec.md
openspec/specs/git-identity-config/: spec.md
openspec/specs/project-file-management/: spec.md
openspec/specs/project-settings-dialog/: spec.md
openspec/specs/user-interface/: spec.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: ProjectConfigForm.svelte  checkpoint.ts  debounce.ts  i18n.svelte.ts  i18n.ts  tauri.ts
src/lib/components/: Editor.svelte  EditorContextMenu.svelte  GitIdentityDialog.svelte  GlobalSettingsDialog.svelte  ProjectSettingsDialog.svelte
src/routes/: +page.svelte
static/: index.html
(+33 files in other folders)
